--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
-    "point-in-polygon": "^1.1.0"
+    "polygon-lookup": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
